error/20200005/25_error.txt
/home/kps/ssu_score/ssu_score/STD_DIR/20200005/25.c: In function ‘main’:
/home/kps/ssu_score/ssu_score/STD_DIR/20200005/25.c:16:21: error: ‘ssu_signal’ undeclared (first use in this function)
     signal(SIGUSR1, ssu_signal);
                     ^~~~~~~~~~
/home/kps/ssu_score/ssu_score/STD_DIR/20200005/25.c:16:21: note: each undeclared identifier is reported only once for each function it appears in
